[package]
name = "slagalica"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An exhaustive program for resolving a problem on Serbian TV"
homepage = "https://github.com/MathieuDutSik/slagalica"
repository = "https://github.com/MathieuDutSik/slagalica"
readme = "README.md"
keywords = ["gmp"]

[dependencies]
rug = "1.15.0"
substring = "1.4.5"
